tests/invalid-syntax/58250_invalid_semantic_type_mismatch/58250_invalid_semantic_type_mismatch.agu
-- Author: 58250, Leonardo Monteiro

let a : Int = true
